[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "storymap"
version = "0.1.0"
description = "Generate user story maps from markdown"
requires-python = ">=3.11"

[project.scripts]
storymap = "storymap.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
