[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "storymap"
version = "0.1.5"
description = "Generate user story maps from markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MozaicWorks", email = "alex.bolboaca@mozaicworks.com" }
]
keywords = ["user story map", "agile", "product", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markdown-it-py>=3.0",
    "jinja2>=3.0",
    "markupsafe>=2.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/mozaicworks/storymap"
Repository = "https://github.com/mozaicworks/storymap"
Issues = "https://github.com/mozaicworks/storymap/issues"

[project.scripts]
storymap = "storymap.cli:main"

[tool.setuptools.packages.find]
exclude = ["out*", "tests*"]

[tool.setuptools.package-data]
storymap = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
